@@ -12,9 +12,45 @@ for my $line (<>){
    push @names, $line;
 }
 
+
+warn("GROUPS..\n");
+
 printf STDERR "got %s elements\n", scalar @names;
+
 my @g = groups($opt_t, \@names);
 
 printf STDERR "got %s groups \n",  scalar @g;
+
+
+
+
+
+
+
+__END__
+warn("GROUPS HARD..\n");
+
+printf STDERR "got %s elements\n", scalar @names;
+
+@g = groups_hard($opt_t, \@names);
+
+printf STDERR "got %s groups \n",  scalar @g;
+
+
+
+
+
+
+
+warn("GROUPS LAZY..\n");
+
+printf STDERR "got %s elements\n", scalar @names;
+
+@g = groups_lazy($opt_t, \@names);
+
+printf STDERR "got %s groups \n",  scalar @g;
+
+
+
 
 exit;
