@@ -1,0 +1,30 @@
+use Test::Simple 'no_plan';
+use strict;
+use lib './lib';
+use Cwd;
+use vars qw($_part $cwd);
+$cwd = cwd();
+
+
+system('rm ./t/*tmp');
+
+   ok 1 , 'cleaned up';
+
+
+
+
+
+
+
+
+
+
+
+
+sub ok_part {
+   printf STDERR "\n\n===================\nPART %s %s\n==================\n\n",
+      $_part++, "@_";
+}
+
+
+
